<resources>
    <string name="app_name">BuffRApp</string>
    <string name="version">Version %s</string>
    <string name="version_error">Unknown</string>
    <string name="notifications_orders_channel_name">Order status notifications</string>
    <string name="notifications_orders_channel_description">Push notifications for BuffRApp orders.</string>
    <string name="notifications_updates_channel_name">Updates notifications</string>
    <string name="notifications_updates_channel_description">Push notifications for BuffRApp\'s updates.</string>
    <string name="notifications_update_ready_channel_name">Completed updates notifications</string>
    <string name="notifications_update_ready_channel_description">Push notifications for BuffRApp\'s completed updates.</string>
    <string name="server_proto" translatable="false">https://</string>
    <string name="server_hostname" translatable="false">buffrapp.servehttp.com</string>
    <string name="server_path" translatable="false">/buffrapp_web/api.php</string>
    <string name="server_path_latest" translatable="false">/latest.apk</string>
    <string name="server_encoding" translatable="false">UTF-8</string>
    <string name="server_request_method" translatable="false">POST</string>
    <string name="server_request_param" translatable="false">request</string>
    <string name="server_content_param" translatable="false">content</string>
    <string name="server_cookie_response_key" translatable="false">Set-Cookie</string>
    <string name="server_cookie_request_key" translatable="false">Cookie</string>
    <string name="request_doUserLogin" translatable="false">doUserLogin</string>
    <string name="request_getUserProducts" translatable="false">getUserProducts</string>
    <string name="request_getUserHistory" translatable="false">getUserHistory</string>
    <string name="request_makeOrder" translatable="false">makeOrder</string>
    <string name="request_getUserOrders" translatable="false">getUserOrders</string>
    <string name="request_cancelOrder" translatable="false">cancelOrder</string>
    <string name="request_getUserProfile" translatable="false">getUserProfile</string>
    <string name="request_setUserProfile" translatable="false">setUserProfile</string>
    <string name="request_sendTechnicalReport" translatable="false">sendTechnicalReport</string>
    <string name="request_checkForUpdates" translatable="false">checkForUpdates</string>
    <string name="key_session_id" translatable="false">session_id</string>
    <string name="key_session_user_name" translatable="false">session_user_name</string>
    <string name="key_last_order" translatable="false">last_order</string>
    <string name="key_first_delivery" translatable="false">first_delivery</string>
    <string name="key_first_run_products" translatable="false">first_run_products</string>
    <string name="key_first_run_requests" translatable="false">first_run_requests</string>
    <string name="key_first_run_history" translatable="false">first_run_history</string>
    <string name="key_first_run_profile" translatable="false">first_run_profile</string>
    <string name="key_needs_storage_permission" translatable="false">needs_storage_permission</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="product_price" translatable="false">$ %s</string>
    <string name="internal_error">Unable to handle this request properly.</string>
    <string name="not_allowed_error">You\'re not allowed to do that, please logout and sign in again.</string>
    <string name="unknown_user">Unknown user</string>
    <string name="action_report">Report a problem</string>
    <string name="unimplemented_feature">Oops! You got us there, that feature isn\'t available yet.</string>
    <string name="welcome">"Hi!\n\nTo keep going, log in."</string>
    <string name="prompt_email">DNI or mail address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"We couldn't find an account matching this combination, please try again."</string>
    <string name="button_wait">Wait…</string>
    <string name="login_crash">We were unable to communicate with the server, please try again later.</string>
    <string name="login_inconsistent">A database problem has been found and your account can\'t be logged in, please contact us.</string>
    <string name="title_activity_products">Products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="request_malformedurl">There\'s been an unexpected exception while fetching the data.</string>
    <string name="no_products">Nothing here, \nwould you like to try reloading?</string>
    <string name="products_error">There was a problem, \nwould you like to try again?</string>
    <string name="products_order_confirmation">Do you really want to order %s?</string>
    <string name="product_unknown">Unknown product</string>
    <string name="order_error">An error has been found, please try again.</string>
    <string name="order_success">Your order has now been queued.</string>
    <string name="order_already_ordered">You\'ve already ordered this item, check its status at the Requests tab.</string>
    <string name="products_feature_discovery">Discover more features</string>
    <string name="products_feature_discovery_description">Tap to see the menu.</string>
    <string name="products_order">Order</string>
    <string name="products_order_description">Request a product.</string>
    <string name="products_error_server_failure">The server at %s didn\'t reply on time: \nit\'s either overloaded or offline.</string>
    <string name="products_error_malformed_url">We couldn\'t build the URL we needed, \ndid you modify the application?</string>
    <string name="order_holder">Holder: %s</string>
    <string name="order_taken">Taken: %s</string>
    <string name="order_ready">Ready: %s</string>
    <string name="order_delivered">Delivered: %s</string>
    <string name="order_cancelled">The order was cancelled.</string>
    <string name="order_cancelled_user">The order was cancelled by the user.</string>
    <string name="history_review">Explore</string>
    <string name="history_review_description">Review your orders.</string>
    <string name="no_history">Nothing here, \nwhy don\'t you order something?</string>
    <string name="requests_order_received">Your order has been received and awaits confirmation, \nyou\'ll be notified once there\'s any movement. \n\nIf you want, you can now close or minimize the application</string>
    <string name="requests_order_received_short">Your order has been received and awaits confirmation, \nyou\'ll be notified once there\'s any movement.</string>
    <string name="requests_order_taken">Your order has been taking and it\'s now in progress. \n\nSoon, you\'ll be notified once your order is done to complete the delivery.</string>
    <string name="requests_order_ready">Your order is ready, you can now complete the delivery.\n\nAs soon as possible, visit the buffet </string>
    <string name="requests_order_delivered">Your order has been delivered, \nit\'ll now show up on the history.</string>
    <string name="requests_order_delivered_first">Congratulations! \nThis is your first order and it\'s been delivered. \n\nCheck it out on the history.</string>
    <string name="requests_order_delivered_short">Your order has been delivered, it\'ll now show up on the history.</string>
    <string name="requests_order_cancelled">We\'re sorry, but your order has been cancelled, \nplease try again later.</string>
    <string name="requests_orders_empty">Nothing here, go ahead, order something!</string>
    <string name="requests_order_status">Your order</string>
    <string name="requests_order_status_description">Here, you\'ll be able to see the progress of your order.</string>
    <string name="action_request_cancel">Cancel order</string>
    <string name="requests_order_cancel_confirmation">Do you really want to cancel your order of %s?</string>
    <string name="requests_order_cancel_success">Your order has been cancelled.</string>
    <string name="requests_order_cancel_failed">There was a problem cancelling your order, please try again.</string>
    <string name="profile_review">Your profile</string>
    <string name="profile_review_description">Review, manage or delete your account.</string>
    <string name="profile_load_failed">It seems like there\'s a problem with your profile, \nplease contact us.</string>
    <string name="profile_update_failed">We didn\'t receive enough fields, \nare you running the latest version?</string>
    <string name="profile_dni_not_allowed">You can\'t change your DNI.</string>
    <string name="action_profile_send_update">Update</string>
    <string name="profile_dni">DNI number</string>
    <string name="profile_mail_address">Mail address</string>
    <string name="profile_password">Password</string>
    <string name="profile_full_name">Full name</string>
    <string name="profile_course">Course</string>
    <string name="profile_division">Division</string>
    <string name="profile_update_success">Done, your profile has been updated!</string>
    <string name="profile_challenge_current_password">Security check</string>
    <string name="profile_challenge_action_verify">Verify</string>
    <string name="action_cancel">Cancel</string>
    <string name="profile_challenge_failed">That\'s not the right password, please try again.</string>
    <string name="profile_challenge_hint">Type your current password</string>
    <string name="about_credits">Created by: \n\n%s %s</string>
    <string name="about_credits_people" translatable="false">- Leonel Moyano\n\n- Aracelli González\n\n- Facundo Montero\n\n</string>
    <string name="about_credits_oss">With the help of the following open source libraries: \n\n%s</string>
    <string name="about_credits_oss_license"> under the terms of the </string>
    <string name="about_credits_oss_license_container" translatable="false">(%s %s).\n\n</string>
    <string name="about_credits_oss_spotlight" translatable="false">Spotlight %s</string>
    <string name="about_credits_oss_konfetti" translatable="false">Konfetti %s</string>
    <string name="about_credits_oss_material_ripple" translatable="false">Material Ripple %s</string>
    <string name="about_credits_oss_license_apache2">Apache License, version 2.0</string>
    <string name="about_credits_oss_license_isc">ISC License</string>
    <string name="report_success">Success sending report!</string>
    <string name="report_fail">Failed to send report, please try again later.</string>
    <string name="report_hint">Here goes the problem you\'re experiencing…</string>
    <string name="report_title">Report a problem</string>
    <string name="report_invalid_content">You must type something.</string>
    <string name="action_send">Send</string>
    <string name="updates_waiting">Looking for updates…</string>
    <string name="updates_error">We couldn\'t look for updates. Are you online?</string>
    <string name="updates_none">No updates found.</string>
    <string name="menu_products">Products</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_send">Send</string>
    <string name="menu_history">History</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_account">Account</string>
    <string name="menu_logout">Logout</string>
</resources>