<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_padding_top_small">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/icProfile"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/products_error"
            android:src="@drawable/ic_layout_profile"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icProfile"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_profile_identification"
            android:drawableLeft="@drawable/ic_profile_identification"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/profile_dni"
            android:inputType="number"
            android:textIsSelectable="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etMailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etDNI"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_profile_mail_address"
            android:drawableLeft="@drawable/ic_profile_mail_address"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/profile_mail_address"
            android:inputType="textEmailAddress"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMailAddress"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_profile_password"
            android:drawableLeft="@drawable/ic_profile_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/profile_password"
            android:inputType="textPassword"
            android:textIsSelectable="false"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_profile_full_name"
            android:drawableLeft="@drawable/ic_profile_full_name"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/profile_full_name"
            android:inputType="textPersonName"
            android:textIsSelectable="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llCourseDivision"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFullName"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/icon_margin_unwrapped"
                android:layout_marginLeft="@dimen/icon_margin_unwrapped"
                android:src="@drawable/ic_profile_course_division" />

            <EditText
                android:id="@+id/etCourse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:focusable="false"
                android:hint="@string/profile_course"
                android:inputType="none" />

            <EditText
                android:id="@+id/etDivision"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:focusable="false"
                android:hint="@string/profile_division"
                android:inputType="none" />
        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llCourseDivision"
            android:layout_centerInParent="true"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btUpdate"
                android:layout_width="150sp"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorAccent"
                android:text="@string/action_profile_send_update"
                android:textColor="@color/white"
                android:visibility="gone" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <ImageView
            android:id="@+id/icError"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/products_error"
            android:src="@drawable/ic_layout_error"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icError"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin_info"
            android:text="@string/products_error"
            android:textAlignment="center"
            android:textColor="@color/colorGreySemitransparent"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvErrorExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvError"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:textColor="@color/black_semitransparent"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/icNoProducts"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/no_products"
            android:src="@drawable/ic_layout_no_products"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvNoProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icNoProducts"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/no_products"
            android:textAlignment="center"
            android:textColor="@color/colorGreySemitransparent"
            android:textSize="20sp"
            android:visibility="gone" />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
